--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="sidebar">
-  <h2>Spartatroniks ⚡</h2>
+  <h2>Spartatroniks </h2>
   <input type="text" id="search" placeholder="Search topics...">
   <div id="menu">
     <div class="section">
