--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ const topics = {
   about: `
 <h1>Welcome to the Electrical Handbook</h1>
 <p>Welcome to the <strong>Team 3512 Spartatroniks Electrical Handbook</strong> — a resource built by our electrical subteam to guide current and future members of <strong>FIRST Robotics Competition Team 3512</strong>.</p>
-<div style="text-align: center; margin: 20px 0;">
-  <img src="img/spartans.png" 
+<div style="text-align: center left; margin: 20px 0;">
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="img/spartans.png" 
        alt="Team 3512 Spartatroniks Logo" 
        style="width: 180px; max-width: 80%; height: auto; border-radius: 12px; box-shadow: 0 0 15px rgba(0,0,0,0.4);">
 </div>
