--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
       <div class="subtopics">
         <a href="#" data-topic="multimeter">Using a Multimeter</a>
         <a href="#" data-topic="continuity">Continuity Checks</a>
+        </div>
+    </div>
+    <div class="section">
+      <button>Online Electrical Sources</button>
+      <div class="subtopics">
+        <a href="#" data-topic="abouttopic">About This Topic</a>
+        <a href="#" data-topic="pdf">Electrical Fundamentals Basics - PDF</a>
         
       </div>
     </div>
@@ -715,5 +722,6 @@ window.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
