--- a/index.html
+++ b/index.html
@@ -677,7 +677,15 @@ safety: `
 <p style="color:#ffcc00; font-weight:bold; text-align:center;">Using a multimeter correctly ensures all batteries and connections allow proper current flow, keeping your robot safe and performing reliably.</p>
 `
 ,
-  continuity: `<h1>Continuity Checks</h1><p>Continuity mode checks if current can flow...</p>`,
+  continuity: `<h1>Continuity Checks</h1><p>Continuity mode checks if current can flow...</p>`
+  ,
+
+   abouttopic: `<h1>About This Topic</h1><p>This topic is a collection of helpful resources for electrical learning, all topics under this section do not belong to the owner.</p>`
+  ,
+  
+  pdf: `<h1> Basics of Electronics Fundamentals</h1><p>This resource is an essential starting point for anyone looking to master the fundamentals of electronics 💡. By walking you through the very basics—from the structure of atoms, neutrons, and electrons to core concepts like voltage, current, and resistance—it provides the critical building blocks for future learning. A strong grasp of these principles is key to understanding and troubleshooting electrical boards used in complex applications, such as those found in FIRST Robotics Competition (FRC) and other long-term projects. If you want a significant advantage in robotics, engineering, or simply wish to demystify the hardware around you, we strongly recommend you read this material to build a solid foundation.  <a href="https://cdn.preterhuman.net/texts/science_and_technology/physics/Electromagnetic_Field_Theory/Teach%20Yourself%20Electricity%20And%20Electronics%203Rd%20-%20Gibilisco.pdf">Helpful PDF For Fundamentals</a>  </p>`
+  ,
+  
   
 };
 
@@ -723,6 +731,7 @@ window.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
