Update fmt.Println message to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ const topics = {
 
 <h2>Special Thanks</h2>
 <p>We want to give special thanks to all <strong>Team 3512 members</strong> — past and present — who contributed their time, knowledge, and dedication to make this possible. Huge appreciation also goes to our <strong>mentors</strong> for their ongoing guidance, patience, and support throughout every build season.</p>
-
+<p style="color: #12203A;">Made by vincent and the skibidi squad toilet serena, elias and ky. skibidi toilet toilet 67 67 67 67 67 67 67 mr beast i like my cheese drippy bruh and skibidi.</p>
 `,
 
 safety: `
@@ -731,6 +731,7 @@ window.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
